[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/UI Assets/files_base.png" type="Texture" id=1]
[ext_resource path="res://UI/UI Assets/files_screenshot_frame_hover.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LabelHover.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ButtonPush.gd" type="Script" id=4]
[ext_resource path="res://UI/UI Assets/gamemenu_frame.png" type="Texture" id=5]
[ext_resource path="res://Font/Ubuntu-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/UI Assets/scrollhorizontal_bar.png" type="Texture" id=7]
[ext_resource path="res://UI/UI Assets/files_infobox_base.png" type="Texture" id=8]
[ext_resource path="res://Scripts/SettingButton.gd" type="Script" id=9]
[ext_resource path="res://UI/UI Assets/scrollhorizontal_base.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Save.gd" type="Script" id=11]
[ext_resource path="res://UI/UI Assets/files_screenshot_base.png" type="Texture" id=12]
[ext_resource path="res://UI/UI Assets/files_screenshot_frame.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 247, 47 )
margin_left = 11.0
margin_right = 10.0

[sub_resource type="StyleBoxTexture" id=28]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 1783, 60 )

[sub_resource type="Theme" id=23]
HScrollBar/styles/grabber = SubResource( 27 )
HScrollBar/styles/grabber_highlight = SubResource( 27 )
HScrollBar/styles/grabber_pressed = SubResource( 27 )
HScrollBar/styles/scroll = SubResource( 28 )
HScrollBar/styles/scroll_focus = SubResource( 28 )

[sub_resource type="DynamicFont" id=24]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=25]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=26]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 6 )

[node name="SaveMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )

[node name="MenuBG" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Frame" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )

[node name="Savables" type="ScrollContainer" parent="."]
margin_left = 62.0
margin_top = 297.0
margin_right = 1855.0
margin_bottom = 1017.0
rect_min_size = Vector2( 1793, 0 )
theme = SubResource( 23 )
scroll_vertical_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="Savables"]
margin_right = 2507.0
margin_bottom = 610.0
rect_min_size = Vector2( 1793, 540 )
custom_constants/margin_right = 65
custom_constants/margin_top = 70
custom_constants/margin_left = 65

[node name="AllInfo" type="HBoxContainer" parent="Savables/MarginContainer"]
margin_left = 65.0
margin_top = 70.0
margin_right = 2442.0
margin_bottom = 610.0
rect_min_size = Vector2( 1663, 540 )
custom_constants/separation = 71

[node name="Save 1" type="TextureRect" parent="Savables/MarginContainer/AllInfo"]
margin_right = 541.0
margin_bottom = 540.0
texture = ExtResource( 12 )

[node name="SavePhoto" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 1"]

[node name="SaveFrame" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 1"]
margin_right = 541.0
margin_bottom = 304.0
texture = ExtResource( 13 )

[node name="SaveHover" type="TextureButton" parent="Savables/MarginContainer/AllInfo/Save 1"]
margin_right = 541.0
margin_bottom = 304.0
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Info" type="Control" parent="Savables/MarginContainer/AllInfo/Save 1"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="SaveInfo" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 1/Info"]
margin_left = 22.5
margin_top = 330.0
margin_right = 518.5
margin_bottom = 533.0
texture = ExtResource( 8 )

[node name="SaveSlot" type="Label" parent="Savables/MarginContainer/AllInfo/Save 1/Info"]
margin_left = 57.65
margin_top = 346.0
margin_right = 91.65
margin_bottom = 414.0
custom_fonts/font = SubResource( 24 )
text = "1"
align = 1
valign = 1

[node name="Delete" type="Label" parent="Savables/MarginContainer/AllInfo/Save 1/Info"]
margin_left = 61.65
margin_top = 449.0
margin_right = 87.65
margin_bottom = 506.0
custom_fonts/font = SubResource( 25 )
text = "x"
align = 1
valign = 1

[node name="Date" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 1/Info"]
margin_left = 168.0
margin_top = 353.0
margin_right = 490.0
margin_bottom = 430.0
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Time" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 1/Info"]
margin_left = 161.834
margin_top = 434.0
margin_right = 489.834
margin_bottom = 510.5
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Save 2" type="TextureRect" parent="Savables/MarginContainer/AllInfo"]
margin_left = 612.0
margin_right = 1153.0
margin_bottom = 540.0
texture = ExtResource( 12 )

[node name="SavePhoto" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 2"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SaveFrame" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 2"]
margin_right = 541.0
margin_bottom = 304.0
texture = ExtResource( 13 )

[node name="SaveHover" type="TextureButton" parent="Savables/MarginContainer/AllInfo/Save 2"]
margin_right = 541.0
margin_bottom = 304.0
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Info" type="Control" parent="Savables/MarginContainer/AllInfo/Save 2"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="SaveInfo" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 2/Info"]
margin_left = 22.5
margin_top = 330.0
margin_right = 518.5
margin_bottom = 533.0
texture = ExtResource( 8 )

[node name="SaveSlot" type="Label" parent="Savables/MarginContainer/AllInfo/Save 2/Info"]
margin_left = 57.65
margin_top = 346.0
margin_right = 91.65
margin_bottom = 414.0
custom_fonts/font = SubResource( 24 )
text = "1"
align = 1
valign = 1

[node name="Delete" type="Label" parent="Savables/MarginContainer/AllInfo/Save 2/Info"]
margin_left = 61.65
margin_top = 449.0
margin_right = 87.65
margin_bottom = 506.0
custom_fonts/font = SubResource( 25 )
text = "x"
align = 1
valign = 1

[node name="Date" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 2/Info"]
margin_left = 168.0
margin_top = 353.0
margin_right = 490.0
margin_bottom = 430.0
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Time" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 2/Info"]
margin_left = 161.834
margin_top = 434.0
margin_right = 489.834
margin_bottom = 510.5
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Save 3" type="TextureRect" parent="Savables/MarginContainer/AllInfo"]
margin_left = 1224.0
margin_right = 1765.0
margin_bottom = 540.0
texture = ExtResource( 12 )

[node name="SavePhoto" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 3"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SaveFrame" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 3"]
margin_right = 541.0
margin_bottom = 304.0
texture = ExtResource( 13 )

[node name="SaveHover" type="TextureButton" parent="Savables/MarginContainer/AllInfo/Save 3"]
margin_right = 541.0
margin_bottom = 304.0
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Info" type="Control" parent="Savables/MarginContainer/AllInfo/Save 3"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="SaveInfo" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 3/Info"]
margin_left = 22.5
margin_top = 330.0
margin_right = 518.5
margin_bottom = 533.0
texture = ExtResource( 8 )

[node name="SaveSlot" type="Label" parent="Savables/MarginContainer/AllInfo/Save 3/Info"]
margin_left = 57.65
margin_top = 346.0
margin_right = 91.65
margin_bottom = 414.0
custom_fonts/font = SubResource( 24 )
text = "1"
align = 1
valign = 1

[node name="Delete" type="Label" parent="Savables/MarginContainer/AllInfo/Save 3/Info"]
margin_left = 61.65
margin_top = 449.0
margin_right = 87.65
margin_bottom = 506.0
custom_fonts/font = SubResource( 25 )
text = "x"
align = 1
valign = 1

[node name="Date" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 3/Info"]
margin_left = 168.0
margin_top = 353.0
margin_right = 490.0
margin_bottom = 430.0
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Time" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 3/Info"]
margin_left = 161.834
margin_top = 434.0
margin_right = 489.834
margin_bottom = 510.5
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Save 4" type="TextureRect" parent="Savables/MarginContainer/AllInfo"]
margin_left = 1836.0
margin_right = 2377.0
margin_bottom = 540.0
texture = ExtResource( 12 )

[node name="SavePhoto" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 4"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SaveFrame" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 4"]
margin_right = 541.0
margin_bottom = 304.0
texture = ExtResource( 13 )

[node name="SaveHover" type="TextureButton" parent="Savables/MarginContainer/AllInfo/Save 4"]
margin_right = 541.0
margin_bottom = 304.0
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Info" type="Control" parent="Savables/MarginContainer/AllInfo/Save 4"]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="SaveInfo" type="TextureRect" parent="Savables/MarginContainer/AllInfo/Save 4/Info"]
margin_left = 22.5
margin_top = 330.0
margin_right = 518.5
margin_bottom = 533.0
texture = ExtResource( 8 )

[node name="SaveSlot" type="Label" parent="Savables/MarginContainer/AllInfo/Save 4/Info"]
margin_left = 57.65
margin_top = 346.0
margin_right = 91.65
margin_bottom = 414.0
custom_fonts/font = SubResource( 24 )
text = "1"
align = 1
valign = 1

[node name="Delete" type="Label" parent="Savables/MarginContainer/AllInfo/Save 4/Info"]
margin_left = 61.65
margin_top = 449.0
margin_right = 87.65
margin_bottom = 506.0
custom_fonts/font = SubResource( 25 )
text = "x"
align = 1
valign = 1

[node name="Date" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 4/Info"]
margin_left = 168.0
margin_top = 353.0
margin_right = 490.0
margin_bottom = 430.0
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Time" type="RichTextLabel" parent="Savables/MarginContainer/AllInfo/Save 4/Info"]
margin_left = 161.834
margin_top = 434.0
margin_right = 489.834
margin_bottom = 510.5
custom_fonts/normal_font = SubResource( 26 )
bbcode_enabled = true

[node name="Labels" type="Control" parent="."]
mouse_filter = 2

[node name="X" type="Label" parent="Labels"]
margin_left = 1700.0
margin_top = 57.0
margin_right = 1871.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 1 )
text = "X"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="XButton" type="TextureButton" parent="Labels/X"]
margin_right = 172.0
margin_bottom = 168.0
script = ExtResource( 4 )

[node name="Menu" type="Label" parent="Labels"]
margin_left = 51.0
margin_top = 57.0
margin_right = 436.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "MENU"
align = 1
valign = 1

[node name="MenuButton" type="TextureButton" parent="Labels/Menu"]
margin_right = 385.0
margin_bottom = 168.0

[node name="Setting" type="Label" parent="Labels"]
margin_left = 1127.0
margin_top = 56.0
margin_right = 1666.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
align = 1
valign = 1

[node name="SettingButton" type="TextureButton" parent="Labels/Setting"]
margin_right = 539.0
margin_bottom = 169.0
script = ExtResource( 9 )

[node name="Save" type="Label" parent="Labels"]
modulate = Color( 0, 0.937255, 1, 1 )
margin_left = 472.0
margin_top = 56.0
margin_right = 777.0
margin_bottom = 222.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 3 )
text = "SAVE"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Load" type="Label" parent="Labels"]
margin_left = 782.0
margin_top = 56.0
margin_right = 1090.0
margin_bottom = 222.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.956863, 1 )
custom_fonts/font = SubResource( 3 )
text = "LOAD"
align = 1
valign = 1

[node name="LoadButton" type="TextureButton" parent="Labels/Load"]
margin_right = 307.0
margin_bottom = 167.0

[connection signal="pressed" from="Savables/MarginContainer/AllInfo/Save 1/SaveHover" to="." method="createSave" binds= [ "1" ]]
[connection signal="pressed" from="Savables/MarginContainer/AllInfo/Save 2/SaveHover" to="." method="createSave" binds= [ "2" ]]
[connection signal="pressed" from="Savables/MarginContainer/AllInfo/Save 3/SaveHover" to="." method="createSave" binds= [ "3" ]]
[connection signal="pressed" from="Savables/MarginContainer/AllInfo/Save 4/SaveHover" to="." method="createSave" binds= [ "4" ]]
[connection signal="mouse_entered" from="Labels/X/XButton" to="Labels/X" method="_on_XButton_mouse_entered"]
[connection signal="mouse_exited" from="Labels/X/XButton" to="Labels/X" method="_on_XButton_mouse_exited"]
[connection signal="pressed" from="Labels/X/XButton" to="Labels/X/XButton" method="_on_XButton_pressed"]
[connection signal="pressed" from="Labels/Setting/SettingButton" to="Labels/Setting/SettingButton" method="_on_SettingButton_pressed"]
